# vscode-remote-try-django

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  lefthook.yml  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: postCreateCommand.sh
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  mypy.yml
employees/: api.py  models.py
employees/migrations/: 0001_initial.py
hello/: api.py
mathematics/: api.py
me/: api.py
snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py
tutorial/: api.py  settings.py  urls.py
