[project]
name = "vscode-remote-try-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-ninja>=1.3.0",
    "django-stubs-ext>=5.1.3",
    "djangorestframework>=3.15.2",
    "pygments>=2.19.1",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.1.3",
    "djangorestframework-stubs[compatible-mypy]>=3.15.3",
    "ruff>=0.9.7",
    "types-pygments>=2.19.0.20250219",
]

[tool.django-stubs]
django_settings_module = "tutorial.settings"

[tool.mypy]
strict = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
