[project]
name = "vscode-remote-try-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-ninja>=1.4.1",
    "django-stubs-ext>=5.2.0",
    "djangorestframework>=3.15.2",
    "pygments>=2.19.1",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.2.0",
    "djangorestframework-stubs[compatible-mypy]>=3.15.3",
    "ruff>=0.11.7",
    "types-pygments>=2.19.0.20250219",
]

[tool.django-stubs]
django_settings_module = "tutorial.settings"

[tool.mypy]

# Platform configuration
python_version = "3.13"

# Untyped definitions and calls
disallow_untyped_defs = false # see ruff flake8-annotations (ANN)
disallow_incomplete_defs = false # see ruff flake8-annotations (ANN)

# Configuring warnings
warn_unused_ignores = true

# Miscellaneous strictness flags
strict = true

# Advanced options
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

# Miscellaneous
warn_unused_configs = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
ignore = [
    "ANN401",
    "ARG",
    "COM812",
    "CPY",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "D404",
    "D417",
    "DJ008",
    "DOC",
    "E501",
    "RUF012",
    "T20",
    "TD001",
    "TD002",
    "TD003",
    "UP006",
    "UP035",
]
preview = true
select = ["ALL"]

[tool.ruff.lint.flake8-builtins]
ignorelist = [
    "list",
]

[tool.ruff.lint.flake8-self]
extend-ignore-names = [
    "_base_manager",
    "_default_manager",
    "_meta",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
split-on-trailing-comma = false
